--- a/views/dashboard/mobileVerification.jade
+++ b/views/dashboard/mobileVerification.jade
@@ -2,6 +2,7 @@ include ../scriptsAndStyles
 extends  ../contextualHeader
 
 block content
+    include ../errorMessage
     p Please verify your mobile number
     em.small This number will be used to connect the users to you for calls that you accept to receive
     hr
