Prev-next month selector

--- a/views/callFlow/index.jade
+++ b/views/callFlow/index.jade
@@ -33,9 +33,9 @@ include header
                     .row.scheduler-header
                         .col-xs-8
                             .row#monthSelector
-                                .col-xs-2#prev «
+                                a.col-xs-2#prev «
                                 .col-xs-8#month April 2014
-                                .col-xs-2#next »
+                                a.col-xs-2#next »
                         .col-xs-4
                             .row Time Slots
                     .row.scheduler-widgets
