--- a/views/dashboard/login.jade
+++ b/views/dashboard/login.jade
@@ -19,6 +19,7 @@ include ../scriptsAndStyles
                         //    input(type='checkbox')
                         //    | Remember me
                         input.btn.btn-primary(type='submit', value='Login')
+                        a.btn.btn-link(href=DashboardUrls.forgotPassword()) Forgot password?
         .col-md-2
 include footer
 script(src='/js/app/dashboard/login.js')
